crates/parser/src/snapshots/parser__test__struct_decl.snap
---
source: crates/parser/src/test.rs
expression: try_it(source2)
---
COMP_UNIT@0..20
  VAR_DEF@0..20
    LET_KW@0..3 "let"
    NAME@3..5
      WHITESPACE@3..4 " "
      IDENT@4..5 "p"
    COLON@5..6 ":"
    TYPE@6..19
      PRIMIT_TYPE@6..19
        WHITESPACE@6..7 " "
        STRUCT_KW@7..13 "struct"
        NAME@13..19
          WHITESPACE@13..14 " "
          IDENT@14..19 "Point"
    SEMI@19..20 ";"
