crates/parser/src/snapshots/parser__test__struct_def.snap
---
source: crates/parser/src/test.rs
expression: try_it(source1)
---
COMP_UNIT@0..31
  STRUCT_DEF@0..31
    STRUCT_KW@0..6 "struct"
    NAME@6..12
      WHITESPACE@6..7 " "
      IDENT@7..12 "Point"
    WHITESPACE@12..13 " "
    L_BRACE@13..14 "{"
    STRUCT_FIELD@14..21
      NAME@14..16
        WHITESPACE@14..15 " "
        IDENT@15..16 "x"
      COLON@16..17 ":"
      TYPE@17..21
        BASE_TYPE@17..21
          PRIMIT_TYPE@17..21
            WHITESPACE@17..18 " "
            INT_KW@18..21 "i32"
    COMMA@21..22 ","
    STRUCT_FIELD@22..29
      NAME@22..24
        WHITESPACE@22..23 " "
        IDENT@23..24 "y"
      COLON@24..25 ":"
      TYPE@25..29
        BASE_TYPE@25..29
          PRIMIT_TYPE@25..29
            WHITESPACE@25..26 " "
            INT_KW@26..29 "i32"
    WHITESPACE@29..30 " "
    R_BRACE@30..31 "}"
