crates/parser/src/snapshots/parser__test__while_statement.snap
---
source: crates/parser/src/test.rs
expression: try_it(source)
---
COMP_UNIT@0..98
  NEWLINE@0..1 "\n"
  WHITESPACE@1..5 "    "
  FUNC_DEF@5..93
    FN_KW@5..7 "fn"
    NAME@7..12
      WHITESPACE@7..8 " "
      IDENT@8..12 "test"
    L_PAREN@12..13 "("
    R_PAREN@13..14 ")"
    BLOCK@14..93
      WHITESPACE@14..15 " "
      L_BRACE@15..16 "{"
      WHILE_STMT@16..87
        NEWLINE@16..17 "\n"
        WHITESPACE@17..25 "        "
        WHILE_KW@25..30 "while"
        WHITESPACE@30..31 " "
        L_PAREN@31..32 "("
        LITERAL@32..33
          INT_LITERAL@32..33 "1"
        R_PAREN@33..34 ")"
        BLOCK@34..87
          WHITESPACE@34..35 " "
          L_BRACE@35..36 "{"
          BREAK_STMT@36..55
            NEWLINE@36..37 "\n"
            WHITESPACE@37..49 "            "
            BREAK_KW@49..54 "break"
            SEMI@54..55 ";"
          CONTINUE_STMT@55..77
            NEWLINE@55..56 "\n"
            WHITESPACE@56..68 "            "
            CONTINUE_KW@68..76 "continue"
            SEMI@76..77 ";"
          NEWLINE@77..78 "\n"
          WHITESPACE@78..86 "        "
          R_BRACE@86..87 "}"
      NEWLINE@87..88 "\n"
      WHITESPACE@88..92 "    "
      R_BRACE@92..93 "}"
  NEWLINE@93..94 "\n"
  WHITESPACE@94..98 "    "
